[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/images/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Weapons/Laser/RayCast/RayCast2D.gd" type="Script" id=2]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.101626, 0.691057 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.537138, 0.980144 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 10 )
color_ramp = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 10 )
color_ramp = SubResource( 9 )

[node name="RayCast2D" type="RayCast2D"]
enabled = true
cast_to = Vector2( 0, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 0.301961, 0.647059, 1, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="CastingParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
visibility_rect = Rect2( 0, -18, 29, 38 )
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="BeamParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
visibility_rect = Rect2( -250, -250, 500, 500 )
local_coords = false
draw_order = 1
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="CollisionParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
visibility_rect = Rect2( -250, -250, 500, 500 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RechargeTime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DamageTime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[connection signal="timeout" from="RechargeTime" to="." method="_on_RechargeTime_timeout"]
[connection signal="timeout" from="DamageTime" to="." method="_on_DamageTime_timeout"]
